# esp32s3_april-tag

./: .codetogether.ignore  .cproject  .gitmodules  .project  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  main.cpp  main.h
main/ap/: ap.cpp  ap.h  ap_camera.cpp  ap_camera.h  ap_eeprom.c  ap_eeprom.h  ap_ir_remote.c  ap_ir_remote.h  ap_spiffs.c  file_server.c  wifi.c  wifi.h  wifi_ap.c  wifi_ap.h
main/bsp/: bsp.c  bsp.h
main/bsp/FreeRTOS/: esp_port.c  esp_port.h
main/common/: def.h  def_err.h
main/common/core/: qbuffer.c  qbuffer.h  util.c  util.h
main/common/hw/: log.c
main/common/hw/include/: button.h  camera.h  cdc.h  cli.h  dat.h  eeprom.h  gpio.h  ir_remote.h  led.h  log.h  spi.h  uart.h  ver.h  wdg.h
main/common/hw/include/qspi/: at25sf321.h  mx25l25645.h
main/hw/: hw.c  hw.h  hw_def.h
main/hw/driver/: button.c  camera.c  cli.c  gpio.c  ir_remote.c  led.c  spi.c  uart.c
main/lib/esp32-camera/conversions/: to_jpg.cpp
main/lib/esp32-camera/driver/: esp_camera.c  sccb.c
main/lib/jpeg/: jpeg.c
main/lib/screen/interface_driver/: scr_interface_driver.h
main/lib/screen/test/: lcd_color_test.c  lcd_mono_test.c
